<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/address"
            android:icon="@drawable/ic_lens_black_24dp"
            android:title="@string/address"/>
        <!--<item-->
            <!--android:id="@+id/recent"-->
            <!--android:icon="@drawable/ic_access_time_black_24dp"-->
            <!--android:title="@string/recent"/>-->
        <item
            android:id="@+id/timeline"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/timeline"/>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/place"
            android:icon="@drawable/ic_room_black_24dp"
            android:title="@string/place"/>
        <!--<item-->
            <!--android:id="@+id/date"-->
            <!--android:icon="@drawable/ic_event_black_24dp"-->
            <!--android:title="@string/date"/>-->
        <!--<item-->
            <!--android:id="@+id/note"-->
            <!--android:checked="true"-->
            <!--android:icon="@drawable/ic_note_black_24dp"-->
            <!--android:title="@string/note"/>-->
        <item
            android:id="@+id/call"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/call"/>
        <item
            android:id="@+id/url"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/url"/>
        <!--<item-->
            <!--android:id="@+id/send"-->
            <!--android:icon="@drawable/ic_email_black_24dp"-->
            <!--android:title="@string/send"/>-->
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/archive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archive"/>
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/trash"/>
    </group>
</menu>
